	(bkpt_flush): Likewise.
	(bkpt_handle_start): Likewise. Adjust for renaming: always ask
	Pbkpt_continue_internal() to singlestep.
	(bkpt_handle): Adjust for renaming.
	(Pbkpt_continue): Determine need for singlestep by inspection of
	IP address.  Consume pending SIGTRAPs if singlestepping is not
	needed.  Simply consume process state changes (and fire handlers)
	if the process is still running.

	* libproc/Pcontrol.c (Pwait): Repeatedly self-invoke to drain all
	outstanding state changes.
	(Pread_scalar): Fix indentation.

2013-02-21  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Pcontrol.h (ps_prochandle_t.bkpt_halted): New, set while
	a breakpoint handler requests that we not continue execution.
	* libproc/Pcontrol.c (Puntrace): Do not resume even on top-level
	Puntrace() unless state is 0 or PS_RUN, and no breakpoint handler
	has requested that we stall.
	(bkpt_handle_start): Set bkpt_halted if a handler so requests.
	(bkpt_handle_singlestep): Likewise.
	(Punbkpt): Clear it if removing the current breakpoint.
	(Pbkpt_continue): Clear it when resuming.
	(Pbkpt_addr): New function.
	* libproc/libproc.h: Prototype it.
	* libproc/rtld_db.c (rd_ldso_consistent_end): Use it.

	* libproc/Pcontrol.h: Fix comment.  Remove prototype of function
	now static.
	(ps_prochandle_t.map_exec): Make an index, not a pointer.
	(ps_prochandle_t.map_ldso): Likewise.
	(ps_prochandle_t.lmids_valid): New, 0 if the link map is unscanned.
	* libproc/Psymtab.c (mapping_purge): Adjust accordingly.
	(object_name_to_map): Likewise.
	(object_to_map): Likewise.
	(Pupdate_maps): Likewise.  Cater for realloc() failure and NULL
	map_file.  Do not look for the dynamic linker in static processes.
	Do not rd_loadobj_iter() ourself: merely set lmids_valid.
	(Paddr2idx): New, like Paddr2mptr() but returning an index.
	(Paddr2mptr): Reimplement in terms of Paddr2idx().

	(file_info_new): Populate file_map.
	(Pbuild_file_symtab): Do not fail if text mappings have no
	file_map.
